--- a/media.html
+++ b/media.html
@@ -44,17 +44,17 @@
 <br>
 
 <div class="video-container">
-  <video class="video" controls poster="/img/banner/coffee-grinder-still-life-tom-mc-nemar.jpg">
+  <video class="video" controls poster="./img/banner/coffee-grinder-still-life-tom-mc-nemar.jpg">
     <source src="Concordia Xpress Touch 0 Promo Video.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 
-  <video class="video" controls poster="/img/banner/cozy-morning-fresh-coffee-newspaper-generative-ia_209190-2673.avif">
+  <video class="video" controls poster="./img/banner/cozy-morning-fresh-coffee-newspaper-generative-ia_209190-2673.avif">
       <source src="City Vending Coffee Machine Promo Video.mp4" type="video/mp4">
       Your browser does not support the video tag.
   </video>
 
-  <video class="video" controls poster="/img/banner/coffee-grinder-still-life-tom-mc-nemar.jpg">
+  <video class="video" controls poster="./img/banner/coffee-grinder-still-life-tom-mc-nemar.jpg">
       <source src="Concordia Xpress Touch 0 Promo Video.mp4" type="video/mp4">
       Your browser does not support the video tag.
   </video>
